Bug 285048 nsImageWin::ConvertDDBtoDIB uses wrong color depth r=ere sr=roc